--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mudawanah-dynamic",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Likes👍 and Comments💬 for Mudawanah",
   "main": "./bin/main.js",
   "types": "./bin/main.d.ts",
@@ -18,6 +18,7 @@
   },
   "keywords": [
     "blog",
+    "dynamic",
     "multilingual",
     "static-site-generator",
     "mudawanah",
@@ -29,11 +30,17 @@
   "license": "MIT",
   "dependencies": {
     "iridium": "^7.2.2",
-    "mudawanah": "^0.1.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.2.1",
+    "mudawanah": "^0.1.2",
     "querix": "^0.1.2"
   },
+  "optionalDependencies": {
+    "@types/koa-router": "^7.0.22"
+  },
   "devDependencies": {
-    "@types/node": "^7.0.31",
+    "@types/koa-bodyparser": "^3.0.23",
+    "@types/node": "^8.0.0",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.3.0",
@@ -45,6 +52,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.1.1",
     "gulp-typescript": "^3.1.7",
+    "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
     "pump": "^1.0.2",
     "tslint": "~5.4.3",
