--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mudawanah-dynamic",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Likes👍 and Comments💬 for Mudawanah",
   "main": "./bin/main.js",
   "types": "./bin/main.d.ts",
@@ -29,6 +29,7 @@
   "author": "Muhammad Ragib Hasin <ragib.hasin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "gravatar": "^1.6.0",
     "iridium": "^7.2.2",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
@@ -39,6 +40,7 @@
     "@types/koa-router": "^7.0.22"
   },
   "devDependencies": {
+    "@types/gravatar": "^1.4.28",
     "@types/koa-bodyparser": "^3.0.23",
     "@types/node": "^8.0.0",
     "eslint": "^4.0.0",
